# final-project-dist-ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile-backend  Dockerfile-frontend  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: ci_cd.yaml
backend/: app.py  eda.ipynb  get_model.py  monitoring_daily_job.py  prediction_analysis.ipynb  predictions.parquet
checkpoints/: checkpoint_0.pt  checkpoint_2.pt
config/: grafana_datasources.yaml
final_project_dist_ml/: get_data.py  get_model.py  train_flow.py  trainer.py
frontend/: streamlit_app.py
tests/: conftest.py  test_get_data.py  test_get_model.py
